kubernetes/deployment-es-client.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: es-client
  labels:
    component: elasticsearch
spec:
  replicas: 3
  template:
    metadata:
      labels:
        component: elasticsearch
        http: enabled
        role: client
    spec:
      containers:
      - name: es-client
        image: raaftech/elasticsearch:6.5.4
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 0.25
            memory: 2Gi
          limits:
            cpu: 1
            memory: 2Gi
        ports:
        - containerPort: 9200
          name: http
        - containerPort: 9300
          name: transport
        livenessProbe:
          tcpSocket:
            port: transport
          initialDelaySeconds: 20
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /_cluster/health
            port: http
          initialDelaySeconds: 20
          timeoutSeconds: 5
        volumeMounts:
        - name: storage
          mountPath: /elasticsearch/data
      volumes:
          - emptyDir:
              medium: ""
            name: storage
