kubernetes/deployment-es-ingest.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: es-ingest
  labels:
    component: elasticsearch
spec:
  replicas: 2
  template:
    metadata:
      labels:
        component: elasticsearch
        http: disabled
        role: ingest
    spec:
      securityContext:
        runAsUser: "185"
        fsGroup: "185"
      containers:
      - name: es-ingest
        image: raaftech/elasticsearch:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 1
            memory: 4Gi
          limits:
            cpu: 2
            memory: 4Gi

        ports:
        - containerPort: 9200
          name: http
        - containerPort: 9300
          name: transport
        livenessProbe:
          tcpSocket:
            port: transport
          initialDelaySeconds: 20
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /_cluster/health
            port: http
          initialDelaySeconds: 20
          timeoutSeconds: 5
        volumeMounts:
        - name: storage
          mountPath: /elasticsearch/data
      volumes:
          - emptyDir:
              medium: ""
            name: storage
