kubernetes/statefulset-es-combined.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: es-combined
  labels:
    app: elasticsearch
    component: elasticsearch
spec:
  selector:
    matchLabels:
      component: elasticsearch
      role: combined
  serviceName: es-transport
  replicas: 1
  template:
    metadata:
      labels:
        component: elasticsearch
        http: enabled
        role: combined
    spec:
      securityContext:
        runAsUser: 185
        fsGroup: 185
      containers:
      - name: es-combined
        image: raaftech/elasticsearch:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "0.25"
            memory: 8Gi
          limits:
            cpu: 1
            memory: 8Gi
        ports:
        - containerPort: 9300
          name: transport
        livenessProbe:
          tcpSocket:
            port: transport
          initialDelaySeconds: 20
          periodSeconds: 10
        volumeMounts:
        - name: storage
          mountPath: /elasticsearch/data
  volumeClaimTemplates:
  - metadata:
      name: storage
      annotations:
        pv.beta.kubernetes.io/gid: "185"
    spec:
      storageClassName: glusterfs-storage-block
      accessModes: [ ReadWriteOnce ]
      resources:
        requests:
          storage: 10Gi
