kubernetes/statefulset-es-data.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: es-data
  labels:
    app: elasticsearch
    component: elasticsearch
spec:
  selector:
    matchLabels:
      component: elasticsearch
      role: data
  serviceName: es-transport
  replicas: 2
  template:
    metadata:
      labels:
        component: elasticsearch
        http: disabled
        role: data
    spec:
      securityContext:
        runAsUser: "185"
        fsGroup: "185"
      containers:
      - name: es-data
        image: raaftech/elasticsearch:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 1
            memory: 8Gi
          limits:
            cpu: 2
            memory: 8Gi
        ports:
        - containerPort: 9200
          name: http
        - containerPort: 9300
          name: transport
        livenessProbe:
          tcpSocket:
            port: transport
          initialDelaySeconds: 20
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /_cluster/health
            port: http
          initialDelaySeconds: 20
          timeoutSeconds: 5
        volumeMounts:
        - name: storage
          mountPath: /elasticsearch/data
  volumeClaimTemplates:
  - metadata:
      name: storage
      annotations:
        pv.beta.kubernetes.io/gid: "185"
    spec:
      storageClassName: glusterfs-storage-block
      accessModes: [ ReadWriteOnce ]
      resources:
        requests:
          storage: 40Gi
