kubernetes/statefulset-es-master.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: es-master
  labels:
    app: elasticsearch
    component: elasticsearch
spec:
  selector:
    matchLabels:
      component: elasticsearch
      role: master
  serviceName: es-transport
  replicas: 3
  template:
    metadata:
      labels:
        component: elasticsearch
        http: disabled
        role: master
    spec:
      securityContext:
        runAsUser: "185"
        fsGroup: "185"
      containers:
      - name: es-master
        image: raaftech/elasticsearch:6.6.0
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 0.25
            memory: 4Gi
          limits:
            cpu: 1
            memory: 4Gi
        ports:
        - containerPort: 9300
          name: transport
        livenessProbe:
          tcpSocket:
            port: transport
          initialDelaySeconds: 20
          periodSeconds: 10
        volumeMounts:
        - name: storage
          mountPath: /elasticsearch/data
  volumeClaimTemplates:
  - metadata:
      name: storage
      annotations:
        pv.beta.kubernetes.io/gid: "185"
    spec:
      storageClassName: glusterfs-storage-block
      accessModes: [ ReadWriteOnce ]
      resources:
        requests:
          storage: 10Gi
