kubernetes/es-ingest-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-ingest
  labels:
    component: elasticsearch
    role: ingest
spec:
  selector:
    component: elasticsearch
    role: ingest
  ports:
  - name: http
    port: 9200
    protocol: TCP
#type: LoadBalancer
