kubernetes/service-es-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: es-http
  labels:
    app: elasticsearch
    component: elasticsearch
spec:
  selector:
    component: elasticsearch
    http: enabled
  ports:
  - name: http
    port: 9200
    protocol: TCP
#type: LoadBalancer
