kubernetes/service-es-transport.yaml
apiVersion: v1
kind: Service
metadata:
  name: es-transport
  labels:
    component: elasticsearch
spec:
  selector:
    component: elasticsearch
  ports:
  - name: transport
    port: 9300
    protocol: TCP
  clusterIP: None
