kubernetes/service-kibana-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana-http
  labels:
    app: elasticsearch
    component: kibana
spec:
  selector:
    component: kibana
  ports:
  - name: http
    port: 5601
    targetPort: http
