kubernetes/route-kibana-http.yaml
apiVersion: v1
kind: Route
metadata:
  name: kibana
  labels:
    app: elasticsearch
    component: kibana
  annotations:
    haproxy.router.openshift.io/timeout: 4m
    template.openshift.io/expose-uri: http://{.spec.host}{.spec.path}
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: kibana-http
